# fastapi-htmx-tailwind

./: .gitignore  README.md  main.py  pyproject.toml
templates/: header.html  index.html  tab1.html  tab2.html  tab3.html
ui/static/: package-lock.json  package.json  tailwind.config.js
ui/static/src/: input.css
ui/templates/: header.html  index.html  tab1.html  tab2.html  tab3.html
