[project]
name = "fastapi-htmx-tailwind"
version = "0.1.0"
description = "Experimenting rendering tabs using FastAPI and HTMX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.1.0",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "polars>=1.27.1",
]

[dependency-groups]
dev = ["ruff>=0.11.6"]
